Döviz kurlarının hesaplanması

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="mb-3"><input type="number" id="amount" class="form-control" placeholder="Miktar"></div>
             </div>
             <button class="btn btn-outline-primary w-100 mb-3" id="calculate">Hesapla</button>
-            <div class="result">
+            <div id="result">
                 <!-- <div class="card border-primary">
                     <div class="card-body text-center" style="font-size: 30px;">
                         100$=2000 TL
